Change from pure css to semantic css framework

--- a/src/main/resources/client/partials/public/404.html
+++ b/src/main/resources/client/partials/public/404.html
@@ -1,1 +1,10 @@
-404
+<div class="outer">
+    <div class="middle">
+        <div class="inner">
+            <h1 class="ui header">
+                <i class="settings icon"></i>
+                404
+            </h1>
+        </div>
+    </div>
+</div>
