--- a/src/main/resources/client/partials/public/404.html
+++ b/src/main/resources/client/partials/public/404.html
@@ -1,10 +1,9 @@
-<div class="outer">
-    <div class="middle">
-        <div class="inner">
-            <h1 class="ui header">
-                <i class="settings icon"></i>
-                404
-            </h1>
+<div class="container-abs">
+    <div class="container-align-middle">
+        <div class="container-404">
+            <h2 class=""><i class="fa fa-exclamation"></i>&nbsp;Error 404</h2>
+            <p>The page you are looking for does not exist!</p>
+            <a href="javascript:history.back()" class="btn btn-lg btn-primary">Go back</a>
         </div>
     </div>
 </div>
