--- a/src/main/resources/client/partials/user/main.html
+++ b/src/main/resources/client/partials/user/main.html
@@ -1,1 +1,5 @@
-Main html
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="container">
+       Awesome app
+    </div>
+</nav>
