--- a/src/main/resources/client/partials/public/404.html
+++ b/src/main/resources/client/partials/public/404.html
@@ -1,5 +1,5 @@
 <div class="container-abs">
-    <div class="container-align-middle">
+    <div class="container-valign-middle">
         <div class="container-404">
             <h2 class=""><i class="fa fa-exclamation"></i>&nbsp;Error 404</h2>
             <p>The page you are looking for does not exist!</p>
