--- a/src/main/resources/client/partials/user/main.html
+++ b/src/main/resources/client/partials/user/main.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <div class="container">
+<nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
+    <div class="container-fluid">
        Awesome app
     </div>
 </nav>
