--- a/src/main/resources/client/css/style.css
+++ b/src/main/resources/client/css/style.css
@@ -1,8 +1,8 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,400italic,600,600italic,700italic);
-@import url(http://fonts.googleapis.com/css?family=Pacifico);
+@import url(http://fonts.googleapis.com/css?family=Raleway:400,600);
+@import url(http://fonts.googleapis.com/css?family=Gloria+Hallelujah);
 
 body {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Raleway', sans-serif;
     color:#777777;
     background-color:white;
     font-size: 16px;
@@ -13,7 +13,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 }
 
 .app-font {
-    font-family: 'Pacifico', cursive;
+    font-family: 'Gloria Hallelujah', cursive;
 }
 
 .container-abs {
@@ -35,6 +35,141 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     text-align:center;
 }
 
+#wrapper {
+    padding-left: 0;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+}
+
+#wrapper.toggled {
+    padding-left: 250px;
+}
+
+#sidebar-wrapper {
+    z-index: 1000;
+    position: fixed;
+    left: 250px;
+    width: 0;
+    height: 100%;
+    margin-left: -250px;
+    overflow-y: auto;
+    background: #5D6999;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+
+    -webkit-box-shadow: inset -18px 0px 17px -17px rgba(0,0,0,0.5);
+    -moz-box-shadow: inset -18px 0px 17px -17px rgba(0,0,0,0.5);
+    box-shadow: inset -18px 0px 17px -17px rgba(0,0,0,0.5);
+}
+
+#wrapper.toggled #sidebar-wrapper {
+    width: 250px;
+}
+
+#page-content-wrapper {
+    width: 100%;
+    padding: 15px;
+}
+
+#wrapper.toggled #page-content-wrapper {
+    position: absolute;
+    margin-right: -250px;
+}
+
+/* Sidebar Styles */
+
+.sidebar-nav {
+    position: absolute;
+    top: 0;
+    width: 250px;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.sidebar-nav li {
+    text-indent: 20px;
+    line-height: 40px;
+}
+
+.sidebar-nav li a {
+    display: block;
+    text-decoration: none;
+    color: #fff;
+}
+
+.sidebar-nav li a:hover {
+    text-decoration: none;
+    color: #fff;
+    background: #6572A6;
+
+    -webkit-box-shadow: inset -18px 0px 17px -17px rgba(0,0,0,0.5);
+    -moz-box-shadow: inset -18px 0px 17px -17px rgba(0,0,0,0.5);
+    box-shadow: inset -18px 0px 17px -17px rgba(0,0,0,0.5);
+}
+
+.sidebar-nav li a:active,
+.sidebar-nav li a:focus {
+    text-decoration: none;
+}
+
+.sidebar-nav > .sidebar-brand {
+    height: 55px;
+    font-size: 24px;
+    line-height: 55px;
+    margin-bottom:23px;
+    border-bottom:1px solid #4D577F;
+    background:#6572A6;
+
+    -webkit-box-shadow: inset -18px 0px 17px -17px rgba(0,0,0,0.5);
+    -moz-box-shadow: inset -18px 0px 17px -17px rgba(0,0,0,0.5);
+    box-shadow: inset -18px 0px 17px -17px rgba(0,0,0,0.5);
+}
+
+.sidebar-nav > .sidebar-brand a {
+    color: #fff;
+}
+
+.sidebar-nav > .sidebar-brand a:hover {
+    color: #fff;
+    background: none;
+
+    -webkit-box-shadow: inset -18px 0px 17px -17px rgba(0,0,0,0.5);
+    -moz-box-shadow: inset -18px 0px 17px -17px rgba(0,0,0,0.5);
+    box-shadow: inset -18px 0px 17px -17px rgba(0,0,0,0.5);
+}
+
+@media(min-width:768px) {
+    #wrapper {
+        padding-left: 250px;
+    }
+
+    #wrapper.toggled {
+        padding-left: 0;
+    }
+
+    #sidebar-wrapper {
+        width: 250px;
+    }
+
+    #wrapper.toggled #sidebar-wrapper {
+        width: 0;
+    }
+
+    #page-content-wrapper {
+        padding: 15px;
+    }
+
+    #wrapper.toggled #page-content-wrapper {
+        position: relative;
+        margin-right: 0;
+    }
+}
+
 @media (min-width: 400px) {
     .container-login {
         margin:0 auto;
@@ -50,7 +185,11 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 }
 
 .navbar-custom {
-    background-color: #323232;
     color:#ccc;
+    min-height: 55px;
+    box-shadow:none;
+    border-radius:0;
+    border:none;
+    border-bottom:1px solid rgba(77, 87, 127, 0.2);
+    margin:-15px -15px 23px -15px;
 }
-
