--- a/src/main/resources/client/css/style.css
+++ b/src/main/resources/client/css/style.css
@@ -55,7 +55,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     height: 100%;
     margin-left: -250px;
     overflow-y: auto;
-    background: #5D6999;
+    background: #fff;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
@@ -72,7 +72,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 
 #page-content-wrapper {
     width: 100%;
-    padding: 15px;
+    padding: 0;
 }
 
 #wrapper.toggled #page-content-wrapper {
@@ -83,8 +83,6 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 /* Sidebar Styles */
 
 .sidebar-nav {
-    position: absolute;
-    top: 0;
     width: 250px;
     margin: 0;
     padding: 0;
@@ -99,13 +97,13 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 .sidebar-nav li a {
     display: block;
     text-decoration: none;
-    color: #fff;
+    color: #000;
 }
 
 .sidebar-nav li a:hover {
     text-decoration: none;
-    color: #fff;
-    background: #6572A6;
+    color: #333;
+    background: #f8f8f8;
 
     -webkit-box-shadow: inset -18px 0px 17px -17px rgba(0,0,0,0.5);
     -moz-box-shadow: inset -18px 0px 17px -17px rgba(0,0,0,0.5);
@@ -117,26 +115,8 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     text-decoration: none;
 }
 
-.sidebar-nav > .sidebar-brand {
-    height: 55px;
-    font-size: 24px;
-    line-height: 55px;
-    margin-bottom:23px;
-    border-bottom:1px solid #4D577F;
-    background:#6572A6;
-
-    -webkit-box-shadow: inset -18px 0px 17px -17px rgba(0,0,0,0.5);
-    -moz-box-shadow: inset -18px 0px 17px -17px rgba(0,0,0,0.5);
-    box-shadow: inset -18px 0px 17px -17px rgba(0,0,0,0.5);
-}
-
-.sidebar-nav > .sidebar-brand a {
-    color: #fff;
-}
-
-.sidebar-nav > .sidebar-brand a:hover {
-    color: #fff;
-    background: none;
+.sidebar-brand {
+    margin:0 0 23px 0 !important;
 
     -webkit-box-shadow: inset -18px 0px 17px -17px rgba(0,0,0,0.5);
     -moz-box-shadow: inset -18px 0px 17px -17px rgba(0,0,0,0.5);
@@ -161,7 +141,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     }
 
     #page-content-wrapper {
-        padding: 15px;
+        padding: 0;
     }
 
     #wrapper.toggled #page-content-wrapper {
@@ -187,9 +167,19 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 .navbar-custom {
     color:#ccc;
     min-height: 55px;
-    box-shadow:none;
     border-radius:0;
-    border:none;
-    border-bottom:1px solid rgba(77, 87, 127, 0.2);
-    margin:-15px -15px 23px -15px;
+    margin:0 0 23px 0;
+}
+
+#menu-toggle {
+    font-size:24px;
+    color:rgba(26,37,48,0.8);
+    line-height:55px;
+    padding:13px 18px 13px 18px;
+    border-right:1px solid rgba(77, 87, 127, 0.2);
+}
+
+#menu-toggle:hover {
+    cursor:default;
+    color:rgba(26,37,48,1);
 }
