--- a/src/main/resources/client/partials/user/main.html
+++ b/src/main/resources/client/partials/user/main.html
@@ -2,12 +2,10 @@
 
     <!-- Sidebar -->
     <div id="sidebar-wrapper">
+        <nav class="navbar navbar-default navbar-custom sidebar-brand app-font">
+            <a href="#">Awesome</a>
+        </nav>
         <ul class="sidebar-nav">
-            <li class="sidebar-brand app-font">
-                <a href="#">
-                    Awesome
-                </a>
-            </li>
             <li>
                 <a href="#">User CRUD</a>
             </li>
@@ -23,10 +21,8 @@
 
     <!-- Page Content -->
     <div id="page-content-wrapper">
-        <nav class="navbar navbar-custom" role="navigation">
-            <div class="container-fluid">
-                <button id="menu-toggle" type="button" class="btn btn-default"><i class="fa fa-bars">&nbsp;</i></button>
-            </div>
+        <nav class="navbar navbar-default navbar-custom" role="navigation">
+            <a id="menu-toggle" class=""><i class="fa fa-bars"> </i></a>
         </nav>
 
         <div class="container-fluid">
