--- a/src/main/resources/client/partials/user/main.html
+++ b/src/main/resources/client/partials/user/main.html
@@ -45,6 +45,10 @@
                 </div>
             </div>
         </div>
+
+        <footer id="footer">
+            dsfjslfjlsjfjsj
+        </footer>
     </div>
     <!-- /#page-content-wrapper -->
 
