--- a/src/main/resources/client/css/style.css
+++ b/src/main/resources/client/css/style.css
@@ -10,6 +10,7 @@ body {
     color:#777777;
     background-color:white;
     font-size: 16px;
+    height:100%;
     min-height: 100%;
 }
 
@@ -19,6 +20,11 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 
 .app-font {
     font-family: 'Gloria Hallelujah', cursive;
+}
+
+.ng-scope {
+    height:100%;
+    min-height:100%;
 }
 
 .container-abs {
@@ -41,6 +47,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 }
 
 #wrapper {
+    height:100%
     min-height: 100%;
     padding-left: 0;
     -webkit-transition: all 0.5s ease;
@@ -67,6 +74,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
+    border-right:1px solid rgba(0,0,0,0.1);
 }
 
 #wrapper.toggled #sidebar-wrapper {
@@ -75,6 +83,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 
 #page-content-wrapper {
     width: 100%;
+    height:100%;
     min-height: 100%;
     padding: 0;
     -moz-box-shadow: 10px 0px 25px 0px #656565;
@@ -82,6 +91,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     -o-box-shadow: 10px 0px 25px 0px #656565;
     box-shadow: 10px 0px 25px 0px #656565;
     filter:progid:DXImageTransform.Microsoft.Shadow(color=#656565, Direction=90, Strength=25);
+
 }
 
 #wrapper.toggled #page-content-wrapper {
@@ -196,4 +206,15 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 
 #menu-toggle:hover {
     cursor:default;
+}
+
+#footer {
+    border-top: 1px solid #e7e7ec;
+    bottom:0;
+    clear: both;
+    font-size: 12px;
+    height: 59px;
+    padding-bottom: 8px;
+    padding-top: 16px;
+    position: relative;
 }
