--- a/src/main/resources/client/partials/user/main.html
+++ b/src/main/resources/client/partials/user/main.html
@@ -2,7 +2,7 @@
 
     <!-- Sidebar -->
     <div id="sidebar-wrapper">
-        <nav class="navbar navbar-default navbar-custom sidebar-brand app-font">
+        <nav class="navbar navbar-default navbar-custom app-font">
             <a href="#">Awesome</a>
         </nav>
         <ul class="sidebar-nav">
@@ -27,13 +27,12 @@
             </div>
             <span class="top-nav-separator"></span>
 
-            <div class="top-nav-item">titi</div>
         </nav>
 
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>Welcome</h1>
+                    <h2>Welcome</h2>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies turpis pretium tortor aliquam placerat. Nunc elementum id mauris non ullamcorper. In hac habitasse platea dictumst. Nunc blandit tellus at justo fringilla, non lacinia nisi convallis. Duis tempus, libero sed suscipit commodo, diam nunc varius eros, nec aliquam arcu leo at eros. Vestibulum vel libero et neque sagittis mollis ac et purus. Aliquam eleifend erat vel metus elementum ornare. Sed tempor nulla eu massa congue volutpat. Etiam interdum erat ut ultrices pulvinar. Proin venenatis, nunc vel fringilla cursus, diam nibh consequat elit, efficitur dapibus dui dui et lacus.
                         Aliquam erat volutpat. Ut volutpat posuere turpis, nec imperdiet lacus dignissim vitae. Nulla scelerisque sem augue. Duis auctor ante consequat ipsum malesuada, a venenatis nisl facilisis. Praesent in ex tincidunt, viverra quam varius, ornare purus. Mauris quis elit lectus. Donec dignissim porttitor tempus. Aenean porttitor ac magna at ultrices. Donec iaculis ex eu sollicitudin sodales. Pellentesque condimentum nisl at sapien vulputate, non laoreet metus sodales. Duis vulputate massa eget tortor vulputate ultricies quis sed purus. Proin suscipit turpis felis, non eleifend orci imperdiet id. Phasellus nec auctor libero.
