--- a/src/main/resources/client/css/style.css
+++ b/src/main/resources/client/css/style.css
@@ -87,11 +87,13 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 }
 
 #wrapper.toggled #page-content-wrapper {
-    width: 100%;
+    width: calc(100% - 250px);
 }
 #wrapper.toggled #sidebar-wrapper {
-    width: 0;
+    width:250px;
 }
+
+
 
 @media(min-width:768px) {
     #sidebar-wrapper {
