--- a/src/main/resources/client/partials/user/main.html
+++ b/src/main/resources/client/partials/user/main.html
@@ -22,11 +22,9 @@
     <!-- Page Content -->
     <div id="page-content-wrapper">
         <nav class="navbar navbar-default navbar-custom" role="navigation">
-            <div class="top-nav-item">
+            <div class="top-nav-item menu-collapse">
                 <a id="menu-toggle" class=""><i class="fa fa-bars"> </i></a>
             </div>
-            <span class="top-nav-separator"></span>
-
         </nav>
 
         <div class="container-fluid">
