--- a/src/main/resources/client/css/style.css
+++ b/src/main/resources/client/css/style.css
@@ -93,7 +93,13 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     width:250px;
 }
 
-
+.menu-collapse {
+    display:inline;
+    padding:0 17px;
+    height:55px;
+    min-height:100%;
+    border-right:1px solid rgba(0,0,0,0.05);
+}
 
 @media(min-width:768px) {
     #sidebar-wrapper {
@@ -103,6 +109,24 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     #page-content-wrapper {
         width: calc(100% - 250px);
     }
+
+    .menu-collapse {
+        display:none;
+    }
+}
+
+.navbar-custom {
+    color:#ccc;
+    min-height: 55px;
+    max-height: 55px;
+    border-radius:0;
+    margin:0;
+    border-left:none;
+    border-top:none;
+    border-right:none;
+    background-color:rgba(230,230,230,0.3);
+    box-shadow: none;
+    border-bottom:1px solid rgba(230,230,230,0.5);
 }
 
 /* Sidebar Styles */
@@ -155,29 +179,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     }
 }
 
-.navbar-custom {
-    color:#ccc;
-    min-height: 55px;
-    max-height: 55px;
-    border-radius:0;
-    margin:0 0 23px 0;
-    border-left:none;
-    border-top:none;
-    border-right:none;
-}
 
-.top-nav-item {
-    display:inline;
-    padding:0 17px;
-    height:55px;
-    min-height:100%;
-}
-
-.top-nav-separator {
-    height:100%;
-    min-height:100%;
-    border-right:1px solid rgba(0,0,0,0.05);
-}
 
 #menu-toggle {
     margin-left:2px;
