Fix menu collapse

--- a/src/main/resources/client/partials/user/main.html
+++ b/src/main/resources/client/partials/user/main.html
@@ -21,11 +21,12 @@
 
     <!-- Page Content -->
     <div id="page-content-wrapper">
-        <nav class="navbar navbar-default navbar-custom" role="navigation">
-            <div class="top-nav-item menu-collapse">
-                <a id="menu-toggle" class=""><i class="fa fa-bars"> </i></a>
+
+        <div class="navbar navbar-default navbar-custom" role="navigation">
+            <div class="menu-collapse">
+                <a id="menu-toggle" class=""><i class="fa fa-bars">&nbsp;</i></a>
             </div>
-        </nav>
+        </div>
 
         <div class="container-fluid">
             <div class="row">
