--- a/src/main/resources/client/partials/user/main.html
+++ b/src/main/resources/client/partials/user/main.html
@@ -1,61 +1,31 @@
-<div id="wrapper">
-
-    <!-- Sidebar -->
-    <div id="sidebar-wrapper">
-        <nav class="navbar navbar-default navbar-custom app-font">
-            <a href="#">Awesome</a>
-        </nav>
-        <ul class="sidebar-nav">
-            <li>
-                <a href="#">User CRUD</a>
-            </li>
-            <li>
-                <a href="#">My Profile</a>
-            </li>
-            <li>
-                <a href="#">Chat</a>
-            </li>
-        </ul>
-    </div>
-    <!-- /#sidebar-wrapper -->
-
-    <!-- Page Content -->
-    <div id="page-content-wrapper">
-
-        <div class="navbar navbar-default navbar-custom" role="navigation">
-            <div class="menu-collapse">
-                <a id="menu-toggle" class=""><i class="fa fa-bars">&nbsp;</i></a>
+<div>
+    <div id="wrapper">
+        <div class="nav navbar navbar-default navbar-custom">
+            <div id="menu-collapse" class="nav-button">
+                <i class="fa fa-bars">&nbsp;</i>
             </div>
         </div>
+        <div id="content">
+            <div id="header-push"></div>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non condimentum quam. Aenean euismod ut urna id varius. Aliquam convallis felis quam, non molestie tortor fermentum in. Praesent convallis cursus lacus. Etiam quis eleifend justo. Donec pellentesque porttitor libero porttitor dapibus. Aenean ut sapien ac mi bibendum rhoncus et eu ipsum. Pellentesque at justo sed lacus tempus consectetur. Vivamus eu orci id odio rhoncus elementum eget ac nulla. Mauris vitae neque vel neque eleifend faucibus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec imperdiet elit a enim cursus faucibus.
+            </p>
+            <h1>h1 heading</h1>
+            <h2>h2 heading</h2>
+            <h3>h3 heading</h3>
+            <h4>h4 heading</h4>
+            <h5>h5 heading</h5>
+            <h6>h6 heading</h6>
 
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h2>Welcome</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies turpis pretium tortor aliquam placerat. Nunc elementum id mauris non ullamcorper. In hac habitasse platea dictumst. Nunc blandit tellus at justo fringilla, non lacinia nisi convallis. Duis tempus, libero sed suscipit commodo, diam nunc varius eros, nec aliquam arcu leo at eros. Vestibulum vel libero et neque sagittis mollis ac et purus. Aliquam eleifend erat vel metus elementum ornare. Sed tempor nulla eu massa congue volutpat. Etiam interdum erat ut ultrices pulvinar. Proin venenatis, nunc vel fringilla cursus, diam nibh consequat elit, efficitur dapibus dui dui et lacus.
-                        Aliquam erat volutpat. Ut volutpat posuere turpis, nec imperdiet lacus dignissim vitae. Nulla scelerisque sem augue. Duis auctor ante consequat ipsum malesuada, a venenatis nisl facilisis. Praesent in ex tincidunt, viverra quam varius, ornare purus. Mauris quis elit lectus. Donec dignissim porttitor tempus. Aenean porttitor ac magna at ultrices. Donec iaculis ex eu sollicitudin sodales. Pellentesque condimentum nisl at sapien vulputate, non laoreet metus sodales. Duis vulputate massa eget tortor vulputate ultricies quis sed purus. Proin suscipit turpis felis, non eleifend orci imperdiet id. Phasellus nec auctor libero.
-                    </p>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies turpis pretium tortor aliquam placerat. Nunc elementum id mauris non ullamcorper. In hac habitasse platea dictumst. Nunc blandit tellus at justo fringilla, non lacinia nisi convallis. Duis tempus, libero sed suscipit commodo, diam nunc varius eros, nec aliquam arcu leo at eros. Vestibulum vel libero et neque sagittis mollis ac et purus. Aliquam eleifend erat vel metus elementum ornare. Sed tempor nulla eu massa congue volutpat. Etiam interdum erat ut ultrices pulvinar. Proin venenatis, nunc vel fringilla cursus, diam nibh consequat elit, efficitur dapibus dui dui et lacus.
-                        Aliquam erat volutpat. Ut volutpat posuere turpis, nec imperdiet lacus dignissim vitae. Nulla scelerisque sem augue. Duis auctor ante consequat ipsum malesuada, a venenatis nisl facilisis. Praesent in ex tincidunt, viverra quam varius, ornare purus. Mauris quis elit lectus. Donec dignissim porttitor tempus. Aenean porttitor ac magna at ultrices. Donec iaculis ex eu sollicitudin sodales. Pellentesque condimentum nisl at sapien vulputate, non laoreet metus sodales. Duis vulputate massa eget tortor vulputate ultricies quis sed purus. Proin suscipit turpis felis, non eleifend orci imperdiet id. Phasellus nec auctor libero.
-                    </p>
-                </div>
-            </div>
+            <p>
+                Pellentesque pharetra nulla nec justo lacinia sollicitudin. Ut sit amet aliquet enim. Sed ornare luctus arcu nec laoreet. Nulla facilisi. Duis ut nisl quis nisl fringilla laoreet ut sed augue. Donec pharetra ante purus, non condimentum nulla semper eget.
+            </p>
+
+            <div id="footer-push"></div>
         </div>
-
-        <footer id="footer">
-            dsfjslfjlsjfjsj
-        </footer>
+        <div id="footer">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        </div>
     </div>
-    <!-- /#page-content-wrapper -->
-
-    <!-- Menu Toggle Script -->
-    <script>
-    $("#menu-toggle").click(function(e) {
-        e.preventDefault();
-        $("#wrapper").toggleClass("toggled");
-    });
-    </script>
 
 </div>
