--- a/src/main/resources/client/partials/user/main.html
+++ b/src/main/resources/client/partials/user/main.html
@@ -1,4 +1,17 @@
 <div>
+    <div id="sidebar-wrapper">
+        <div class="nav navbar navbar-default navbar-custom">
+            Hello World
+        </div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non condimentum quam. Aenean euismod ut urna id varius.</p>
+        <ul>
+            <li>Menu Item 1</li>
+            <li>Menu Item 2</li>
+            <li>Menu Item 3</li>
+            <li>Menu Item 4</li>
+            <li>Menu Item 5</li>
+        </ul>
+    </div>
     <div id="wrapper">
         <div class="nav navbar navbar-default navbar-custom">
             <div id="menu-collapse" class="nav-button">
