--- a/src/main/resources/client/css/style.css
+++ b/src/main/resources/client/css/style.css
@@ -37,6 +37,12 @@ h1, h2, h3, h4, h5, h6 {
 #wrapper {
     height: 100%;
     float:right;
+
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;
 }
 
 #sidebar-wrapper, #footer, .navbar-custom, .nav-button, .nav-button-close {
@@ -44,16 +50,62 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #sidebar-wrapper {
-     height: 100%;
-     float:left;
-     position: fixed;
-     width: 260px;
-     margin-left: -260px;
-     z-index: 1100;
-     background: white;
-     border-left:none;
-     border-top:none;
-     border-bottom:none;
+    height: 100%;
+    float:left;
+    position: fixed;
+    width: 260px;
+    margin-left: -260px;
+    z-index: 1100;
+    background: white;
+    border-left:none;
+    border-top:none;
+    border-bottom:none;
+
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+
+#sidebar-content-wrapper p {
+    padding:16px;
+    margin:0;
+}
+
+#sidebar-content-wrapper #menu-list {
+    margin:0;
+    padding:0;
+    width:100%;
+    list-style-type:none;
+}
+
+.menu-list-item {
+    font-size:16px;
+    height:48;
+    line-height:48px;
+    padding:0;
+}
+
+.menu-list-item .link {
+    padding:0;
+    width:100%;
+    height:100%;
+    display:inline-block;
+}
+.menu-list-item .link:hover {
+    color: #2196f3;
+    text-decoration:none;
+}
+
+.menu-list-item .link .icon {
+    font-size:20px;
+    padding: 0 32px 0 16px;
+    display:inline-block;
+}
+
+.menu-list-item:hover {
+    background-color:rgba(230,230,230,0.3);
 }
 
 #footer, .navbar-custom {
@@ -73,7 +125,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .nav-button {
     cursor: default;
-    font-size:23px;
+    font-size:20px;
     height: 56px;
     line-height: 56px;
     margin:0;
@@ -86,7 +138,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .nav-button-close {
     cursor: default;
-    font-size:23px;
+    font-size:14px;
     height: 56px;
     line-height: 56px;
     margin:0;
