--- a/src/main/resources/client/css/style.css
+++ b/src/main/resources/client/css/style.css
@@ -80,6 +80,7 @@ h1, h2, h3, h4, h5, h6 {
     list-style-type:none;
 }
 
+
 .menu-list-item {
     font-size:16px;
     height:48;
@@ -92,7 +93,13 @@ h1, h2, h3, h4, h5, h6 {
     width:100%;
     height:100%;
     display:inline-block;
+    color: rgb(119, 119, 119);
 }
+
+.menu-list-item .active {
+    color: #2196f3;
+}
+
 .menu-list-item .link:hover {
     color: #2196f3;
     text-decoration:none;
