--- a/src/main/resources/client/partials/user/main.html
+++ b/src/main/resources/client/partials/user/main.html
@@ -12,7 +12,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non condimentum quam. Aenean euismod ut urna id varius.</p>
             <ul id="menu-list">
                 <li class="menu-list-item">
-                    <a class="link" ui-sref="user.home">
+                    <a class="link active" ui-sref="user.home">
                         <span class="icon"><i class="fa fa-home"></i></span>Welcome
                     </a>
                 </li>
