--- a/src/main/resources/client/css/style.css
+++ b/src/main/resources/client/css/style.css
@@ -12,6 +12,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .ng-scope {
+     height: 100%;
+ }
+
+#main-container {
     height: 100%;
 }
 
@@ -35,6 +39,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #wrapper {
+    width: 100%;
     height: 100%;
     float:right;
 
@@ -182,6 +187,7 @@ h1, h2, h3, h4, h5, h6 {
     }
 
     #wrapper {
+        width: calc(100% - 260px);
         margin-left:260px;
     }
 }
