Fix sidebar menu display

--- a/src/main/resources/client/partials/user/crud.html
+++ b/src/main/resources/client/partials/user/crud.html
@@ -1,5 +1,5 @@
 <div class="nav navbar navbar-default navbar-custom">
-    <div id="open-menu" class="nav-button" ng-click="menuVisible = true">
+    <div id="open-menu" class="nav-button" ng-click="$rootScope.menuVisible = true">
         <i class="fa fa-bars">&nbsp;</i>
     </div>
     <div>CRUD Example</div>
