--- a/src/main/resources/client/partials/user/crud.html
+++ b/src/main/resources/client/partials/user/crud.html
@@ -2,13 +2,30 @@
     <div id="open-menu" class="nav-button" ng-click="$rootScope.menuVisible = true">
         <i class="fa fa-bars">&nbsp;</i>
     </div>
-    <div>CRUD Example</div>
+    <div class="screen-title">CRUD Foo</div>
 </div>
 <div id="content">
     <div id="header-push"></div>
-
-
-
+        <table class="table table-hover" >
+            <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>Label</th>
+                    <th>Description</th>
+                    <th>Date</th>
+                    <th>Bool</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="foo in foos">
+                    <td>{{foo.id}}</td>
+                    <td>{{foo.label}}</td>
+                    <td>{{foo.description}}</td>
+                    <td>{{foo.date}}</td>
+                    <td>{{foo.bool}}</td>
+                </tr>
+            </tbody>
+        </table>
     <div id="footer-push"></div>
 </div>
 <div id="footer">
